# Medenvscale

./: .gitignore  Dockerfile  MedEnvScale-Train_dataset_idea.md  MedEnvScale_MedAgentGym_7Axis_DynamicVerifiableOperator_ToolBudget_Codex_实验方案.md  MedEnvScale_MedAgentGym_BioCoder_当前实验方案.md  MedEnvScale_MedAgentGym_BioCoder_详细实验方案_供GPT参考.md  MedEnvScale_MedAgentGym_DynamicScaling_总体方案概览.md  README.md  error_profile.json  intensity_rubric.md  log.txt  pyproject.toml  pytest.py  requirements.txt  test.fasta  test_sequences.fasta  test_sequences.txt
configs/: agent_llm.yaml  llm.yaml
prompts/: axis_weight_planner_4axis.jinja  domain_guidance_generate.jinja  dynamic_verifiable_operator_planner.jinja  ideal_answer_generate.jinja  llm_rubric_judge.jinja  medagentgym_to_task_state.jinja  prm_step_generate.jinja  prompt_rewrite.jinja  prompt_rewriter.jinja  qpoint_audit.jinja  qpoint_extract.jinja  rejected_answer_generate.jinja  rubric_generate.jinja  scaled_gold_generate.jinja  scaled_gold_repair.jinja  scaled_oracle_cases_repair.jinja  scaled_oracle_examples_generate.jinja  seed_execution_case_reconstruct.jinja  stage00_code_repair.jinja  task_router.jinja  tool_config_planner.jinja  tool_sft_clean_teacher.jinja  tool_sft_flawed_draft_teacher.jinja  tool_sft_repair_teacher.jinja
scripts/: 00_05_5_generate_data.py  00_download_medqa_en.py  00_prepare_medagentgym.py  01_normalize_medagentgym.py  01_normalize_medqa_en.py  02_route_medagentgym_task.py  02_route_medqa_domain_task.py  03_generate_seed_cases.py  04_generate_environment_skeletons.py  05_5_assign_splits.py  (+20 more)
(+320 files in other folders)
