[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medenvscale-medagentgym"
version = "0.1.0"
description = "MedEnvScale MVP for MedAgentGym executable biomedical agent tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "requests>=2.31",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
